--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -491,6 +491,13 @@ QComboBox {
           </widget>
          </item>
          <item>
+          <widget class="QToolButton" name="syncButton">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -506,8 +513,7 @@ QComboBox {
          <item>
           <widget class="QToolButton" name="searchIcon">
            <property name="styleSheet">
-            <string notr="true">margin-left:30px;
-border-top-left-radius:5px;
+            <string notr="true">border-top-left-radius:5px;
 border-bottom-left-radius:5px;
 border:1px solid gray;
 border-right:none;
@@ -526,7 +532,7 @@ border-top-right-radius:5px;
 border-bottom-right-radius:5px;
 border:1px solid gray;
 border-left:none;
-</string>
+margin-right:30px;</string>
            </property>
           </widget>
          </item>
